--- a/RPAS-AssociateService/Jenkinsfile
+++ b/RPAS-AssociateService/Jenkinsfile
@@ -3,7 +3,8 @@ pipeline {
     stages {
         stage('build') {
             steps {
-                sh 'mvn package'
+                sh 'echo "hello"'
+                sh 'cd ../'
             }
         }
     }
